--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,16 +71,17 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-brand,
 .navbar .container-fluid ul li a {
-	padding: 18px 40px;
+	padding: 20px 30px 16px 30px;
 	line-height: 24px;
 }
 
 .navbar-brand {
-  font-size: 200%;
+  font-size: 32px;
 }
 
 .navbar-nav {
-  font-size: 150%;
+  font-size: 24px;
+  background-color: white;
 }
 
 .navbar-brand:hover {
@@ -101,25 +102,6 @@ a {
 	color: black;
 }
 
-/* Bootstrap replacement */
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:hover, 
-.nav-pills > li.active > a:focus {
-  background-color: white;
-  color: #3a90ff;
-  position: relative;
-  top: -5px;
-  z-index: -1;
-}
-
-.nav-pills > li.active {
-  height: 50px;
-  border-top: 5px solid black;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;         /* Opera/IE 8+ */
-}
-
 .form-control {
 	border-radius: 0;
 	box-shadow: none;
@@ -128,3 +110,15 @@ a {
 .btn {
 	border-radius: 0;
 }
+
+/* Toggle button for mobile menu */
+.icon-bar {
+  background-color: black;
+}
+
+button.navbar-toggle {
+  margin-top: 13px;
+  margin-bottom: 13px;
+  border: 1px solid #666666;
+}
+
